--- a/Aks/src/app/account/account.component.html
+++ b/Aks/src/app/account/account.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      AKSANTIMED
+      Inscription
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,7 +13,7 @@
 <ion-content>
   <!-- Default Label -->
   <!-- Default Note -->
- 
+
   <ion-grid>
     <ion-row>
       <ion-col size="12">
@@ -22,10 +22,13 @@
       <ion-col size="12">
       </ion-col>
       <ion-col size="12">
-
+        <ion-note>Cette section est reservée aux profesionels de la santé.
+        </ion-note>
       </ion-col>
       <ion-col size="12">
-
+        <ion-note>Le contrôle de la véracité des informations fournies se fait en collaboration avec le Ministère de la
+          santé.
+        </ion-note>
       </ion-col>
       <ion-col size="12">
 
@@ -34,10 +37,17 @@
         <ion-button expand="block" color="primary">Identifiez-vous</ion-button>
       </ion-col>
       <ion-col size="12">
-
+        
+         
+          <ion-label>
+            {{title}}
+          </ion-label>
+      
       </ion-col>
       <ion-col size="12">
-        <ion-button expand="block" color="primary">Insrivez-vous</ion-button>
+        <ion-button expand="block" color="primary">Pas encore inscrit?</ion-button>
+      </ion-col>
+      <ion-col size="12">
       </ion-col>
     </ion-row>
   </ion-grid>
