--- a/Aks/src/app/home/home.page.html
+++ b/Aks/src/app/home/home.page.html
@@ -4,40 +4,97 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      AKSANTIMED
+      Accueil
     </ion-title>
   </ion-toolbar>
 </ion-header>
-  
+
 
 <ion-content>
   <!-- Default Label -->
-<!-- Default Note -->
+  <!-- Default Note -->
 
-<ion-grid>
+  <ion-grid>
     <ion-row>
+
+      <ion-col size="12">
+
+
+      </ion-col>
+      <ion-col size="12">
+        <ion-list-header>Nouvelles</ion-list-header>
+      </ion-col>
+      <ion-col size="12">
+
         <ion-col size="12">
-           Votre code
-           
-          </ion-col>
-          <ion-col size="12">
-              <ion-note>Vous devez gratter l'étiquette à gratter AksantiMed apposée sur la boite de votre médicament.</ion-note>
-            </ion-col>
-        <ion-col size="12">
-            
+          <ion-icon name="notifications-outline" color="warning"></ion-icon>
+          <ion-note> 30/08/2019 - 09:09</ion-note>
         </ion-col>
-        <ion-col size="12">
-            
-          </ion-col>
-        <ion-col size="12">
-         <!-- Input with placeholder -->
-<ion-input type="number" placeholder="Entrer les 12 chiffres du code"></ion-input>
-        </ion-col>
-        <ion-col size="12">
-            <ion-button expand="block" color="primary">Validez votre code</ion-button>
-        </ion-col>
-      </ion-row></ion-grid></ion-content>
+      </ion-col>
+      <ion-col size="12">
+        Un quatrième cas d'Ebola a été confirmé ce jeudi à Goma dans l'est de la RDC. " Ce nouveau cas est la femme de
+        l'homme qui est décédé hier matin. Nous sommes en train d'effectuer les investigations autour de ce cas ", a
+        déclaré à l'AFP le Dr Boubacar Diallo, coordonnateur en charge de la surveillance de cette épidémie ...
+      </ion-col>
+      <ion-col size="12">
+        <ion-icon name="notifications-outline" color="warning"></ion-icon>
+        <ion-note> 23/08/2019 - 09:09</ion-note>
+      </ion-col>
+
+      <ion-col size="12">
+        La RDC et ses partenaires mobilisent 579 millions USD pour lutter contre Ebola Au total, 2 877 cas ont été
+        enregistrés depuis le début de l’épidémie il y a un an, dont 1 934 décès.
+      </ion-col>
+
+      <ion-col size="12">
+
+
+      </ion-col>
+      <ion-col size="12">
+        <ion-icon name="logo-facebook"></ion-icon> Facebook <ion-icon name="logo-twitter"></ion-icon> Twitter <ion-icon
+          name="logo-whatsapp"></ion-icon> Whatsapp
+      </ion-col>
+      <ion-col size="12">
+        <ion-content fullscreen>
+          <ion-list>
+            <ion-list-header>Informations</ion-list-header>
+            <ion-item>
+              <ion-label> La RDC et ses partenaires mobilisent 579 millions USD pour lutter contre Ebola Au total, 2 877
+                cas ont été
+                enregistrés depuis le début de l’épidémie il y a un an, dont 1 934 décès.</ion-label>
+              <ion-badge slot="end">22k</ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label>Ordre des pharmaciens</ion-label>
+              <ion-badge color="secondary" slot="end">118k</ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label>Ordre des médecins</ion-label>
+              <ion-badge color="tertiary" slot="end">34k</ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label>Ordre des dentistes</ion-label>
+              <ion-badge color="success" slot="end">80</ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label>Fermeture de pharmacie</ion-label>
+              <ion-badge color="warning" slot="end">70</ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label>Retrait produit</ion-label>
+              <ion-badge color="danger" slot="end">1000</ion-badge>
+            </ion-item>
+
+
+
+          </ion-list>
+        </ion-content>
+      </ion-col>
+
+      <ion-col size="12">
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
 <ion-footer></ion-footer>
-
-
-
