--- a/Aks/src/app/interactions/interactions.component.scss
+++ b/Aks/src/app/interactions/interactions.component.scss
@@ -1,7 +1,8 @@
-.ng-autocomplete {
-    width:100%;
-    max-width: 600px;
-    display: table;
-    margin: 0 auto;
-  }
-  
+/* Structure */
+table {
+  width: 100%;
+}
+
+.icon {
+  fill: #488aff;
+}
