--- a/Aks/src/app/medicaments/medicaments.component.html
+++ b/Aks/src/app/medicaments/medicaments.component.html
@@ -21,7 +21,7 @@
              
             </ion-col>
             <ion-col size="12">
-                <ion-note>Les renseignements fournies sont à titre informatifs et n'ont aucune valeur scientifique et ne peut servir à un autre usage qu'en dehors de la validation des médicaments.<br><br>
+                <ion-note>Les renseignements fournies sont à titre informatifs.Ils n'ont aucune valeur scientifique et ne peut servir à un autre usage qu'en dehors de la validation des médicaments.<br><br>
                   AksantiMed ne garantit pas l'efficacité des médicaments et ne peut être tenu responsable des conséquences liées au non-respect des prescriptions indiquées, du mode de conservation et d'entreposage non recommandé par la firme pharmaceutique.<br><br>
                   AksantiMed ne peut être tenu responsable des effets secondaires résultants de l'association avec d'autres médicaments connus ou provenant de la médecine traditionnelle.<br><br></ion-note>
               </ion-col>
