--- a/Aks/src/app/professionel/professionel.component.html
+++ b/Aks/src/app/professionel/professionel.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      AKSANTIMED
+      Annuaire
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -29,7 +29,23 @@
       </ion-col>
       <ion-col size="12">
         <!-- Input with placeholder -->
-        <ion-input placeholder="Entrer votre recherche"></ion-input>
+        <ion-input placeholder="Entrer votre recherche un nom"></ion-input>
+      </ion-col>
+      <ion-col size="12">
+        <!-- Input with placeholder -->
+
+        <ion-item>
+          <ion-label>Catégories</ion-label>
+          <ion-select placeholder="Votre choix">
+            <ion-select-option value="f">Pharmacien</ion-select-option>
+            <ion-select-option value="m">Médecin</ion-select-option>
+            <ion-select-option value="f">Dentiste</ion-select-option>
+            <ion-select-option value="m">infirmier</ion-select-option>
+            <ion-select-option value="f">Kinésiterapheute</ion-select-option>
+            <ion-select-option value="m">Autres</ion-select-option>
+          </ion-select>
+        </ion-item>
+
       </ion-col>
       <ion-col size="12">
 
