--- a/Aks/src/app/search-simple/search-simple.component.html
+++ b/Aks/src/app/search-simple/search-simple.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      AKSANTIMED
+      Recherche simple
     </ion-title>
   </ion-toolbar>
 </ion-header>
