--- a/Aks/src/app/medicaments/medicaments.component.html
+++ b/Aks/src/app/medicaments/medicaments.component.html
@@ -1,48 +1,55 @@
 <ion-header>
     <ion-toolbar color="primary">
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>
-        AKSANTIMED
-      </ion-title>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Medicaments</ion-title>
     </ion-toolbar>
-  </ion-header>
-    
-  
-  <ion-content>
+</ion-header>
+
+
+
+<ion-content>
     <!-- Default Label -->
-  <!-- Default Note -->
-  
-  <ion-grid>
-      <ion-row>
-          <ion-col size="12">
-             Médicaments
-             
+    <!-- Default Note -->
+
+
+    <ion-grid>
+        <ion-row>
+            <ion-col size="12">Médicaments</ion-col>
+            <ion-col size="12">
+                <ion-note>
+                    Les renseignements fournies sont à titre informatifs.Ils n'ont aucune valeur scientifique et ne peut servir à un autre usage qu'en dehors de la validation des médicaments.
+                    <br>
+                    <br>
+                    AksantiMed ne garantit pas l'efficacité des médicaments et ne peut être tenu responsable des conséquences liées au non-respect des prescriptions indiquées, du mode de conservation et d'entreposage non recommandé par la firme pharmaceutique.
+                    <br>
+                    <br>
+                    AksantiMed ne peut être tenu responsable des effets secondaires résultants de l'association avec d'autres médicaments connus ou provenant de la médecine traditionnelle.
+                    <br>
+                    <br>
+                </ion-note>
+            </ion-col>
+            <ion-col size="12"></ion-col>
+            <ion-col size="12"></ion-col>
+            <ion-col size="12"></ion-col>
+            <ion-col size="12">
+                <ion-button
+                    expand="block"
+                    color="primary"
+                >
+                    Recherche simple
+                </ion-button>
             </ion-col>
             <ion-col size="12">
-                <ion-note>Les renseignements fournies sont à titre informatifs.Ils n'ont aucune valeur scientifique et ne peut servir à un autre usage qu'en dehors de la validation des médicaments.<br><br>
-                  AksantiMed ne garantit pas l'efficacité des médicaments et ne peut être tenu responsable des conséquences liées au non-respect des prescriptions indiquées, du mode de conservation et d'entreposage non recommandé par la firme pharmaceutique.<br><br>
-                  AksantiMed ne peut être tenu responsable des effets secondaires résultants de l'association avec d'autres médicaments connus ou provenant de la médecine traditionnelle.<br><br></ion-note>
-              </ion-col>
-          <ion-col size="12">
-              
-          </ion-col>
-          <ion-col size="12">
-              
+                <ion-button
+                    expand="block"
+                    color="primary"
+                >
+                    Recherche avancée
+                </ion-button>
             </ion-col>
-          <ion-col size="12">
-           
-          </ion-col>
-          <ion-col size="12">
-              <ion-button expand="block" color="primary">Recherche simple</ion-button>
-          </ion-col>
-          <ion-col size="12">
-              <ion-button expand="block" color="primary">Recherche complexe</ion-button>
-          </ion-col>
-        </ion-row></ion-grid></ion-content>
-  <ion-footer></ion-footer>
-  
-  
-  
-  
+        </ion-row>
+    </ion-grid>
+</ion-content>
+<ion-footer></ion-footer>
