--- a/Aks/src/app/search-simple/search-simple.component.html
+++ b/Aks/src/app/search-simple/search-simple.component.html
@@ -8,8 +8,6 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-
 <ion-content>
   <!-- Default Label -->
   <!-- Default Note -->
@@ -17,31 +15,45 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12">
-        Recherche simple
-
-      </ion-col>
-      <ion-col size="12">
-        <ion-note>Vous pouvez rentrer un nom commercial, une DCI (Dénomination Commune Internationale).<br><br>Les
-          résultats sont affichés par ordre de pertinence.</ion-note>
-      </ion-col>
-      <ion-col size="12">
+       Entrer un terme.
 
       </ion-col>
       <ion-col size="12">
 
+        <ion-note>Les résultats sont classés par ordre de pertinence de 1 à 0.<br><br> Vous pouvez rechercher par:
+           Nom commercial <br>
+           DCI: Dénomination Commune Internationale <br>
+           ou par code ATC: Anatomique, Thérapeutique et Chimique.
+        </ion-note>
       </ion-col>
       <ion-col size="12">
-        <!-- Input with placeholder -->
-        <ion-input placeholder="Entrer votre recherche"></ion-input>
-
-
-     
-
-
       </ion-col>
       <ion-col size="12">
-        <ion-button expand="block" color="primary">Recherche</ion-button>
       </ion-col>
+      <ion-col size="12">
+        <!--Debut formulaire-->
+        <!-- If user is loaded show the form, else show the loading template -->
+        <form [formGroup]="form" (ngSubmit)="submit()">
+
+          <ion-item>
+            <ion-label>Entrer un terme.</ion-label>
+            <ion-input type="text" placeholder="" id="votretext" class="form-control" formControlName="votretext">
+            </ion-input>
+
+          </ion-item>
+          <ion-button expand="block" color="primary" ion-button type="submit" block [disabled]="!form.valid">Recherche
+          </ion-button>
+        </form>
+        <p [innerHTML]="myResponse"></p>
+        <ng-template #loading>
+          Votre reponse ...
+        </ng-template>
+        <!--Fin formulaire-->
+      </ion-col>
+      <ion-col size="12">
+
+      </ion-col>
+
     </ion-row>
   </ion-grid>
 </ion-content>
