--- a/Aks/src/app/account/account.component.html
+++ b/Aks/src/app/account/account.component.html
@@ -1,55 +1,135 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Inscription
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Inscription</ion-title>
+    </ion-toolbar>
 </ion-header>
-
-
 <ion-content>
-  <!-- Default Label -->
-  <!-- Default Note -->
+    <ion-grid>
+        <ion-row>
+            <ion-col size="12">Inscrivez-vous</ion-col>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12">
-        Inscrivez-vous
-      </ion-col>
-      <ion-col size="12">
-      </ion-col>
-      <ion-col size="12">
-        <ion-note>Cette section est reservée aux profesionels de la santé.
-        </ion-note>
-      </ion-col>
-      <ion-col size="12">
-        <ion-note>Le contrôle de la véracité des informations fournies se fait en collaboration avec le Ministère de la
-          santé.
-        </ion-note>
-      </ion-col>
-      <ion-col size="12">
 
-      </ion-col>
-      <ion-col size="12">
-        <ion-button expand="block" color="primary">Identifiez-vous</ion-button>
-      </ion-col>
-      <ion-col size="12">
-        
-         
-          <ion-label>
-            {{title}}
-          </ion-label>
-      
-      </ion-col>
-      <ion-col size="12">
-        <ion-button expand="block" color="primary">Pas encore inscrit?</ion-button>
-      </ion-col>
-      <ion-col size="12">
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+
+
+
+
+            <ion-col size="12">
+                <ion-note>
+                    Les renseignements fournis sont validés par les autorités compétentes.
+                    <br>
+                    <br>
+                    L'inscription aux services Aksantimed est reservée aux professionnels de la santé.
+                    <br>
+                    <br>
+                </ion-note>
+            </ion-col>
+
+
+
+
+
+
+            <ion-col>
+                <form
+                    [formGroup]="signupForm"
+                    (ngSubmit)="onSubmit()"
+                >
+                    <ion-item>
+                        <ion-label>Civilité</ion-label>
+                        <ion-select placeholder="Choix">
+                            <ion-select-option value="f">Madame, Mademoiselle</ion-select-option>
+                            <ion-select-option value="m">Monsieur</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>Profession / Occupation</ion-label>
+                        <ion-select placeholder="Choix">
+                            <ion-select-option value="f">Pharmacien</ion-select-option>
+                            <ion-select-option value="m">Medecin</ion-select-option>
+                            <ion-select-option value="f">Dentiste</ion-select-option>
+                            <ion-select-option value="m">Kinesiterapeute</ion-select-option>
+                            <ion-select-option value="m">Infirmier</ion-select-option>
+                            <ion-select-option value="m">Etudiant</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>Structure</ion-label>
+                        <ion-select placeholder="Choix">
+                            <ion-select-option value="m">Pharmacie</ion-select-option>
+                            <ion-select-option value="f">Hopital/Clinique</ion-select-option>
+                            <ion-select-option value="m">Industrie pharmaceutique</ion-select-option>
+                            <ion-select-option value="f">Université</ion-select-option>
+                            <ion-select-option value="m">Depot pharmaceutique</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>Adresse Email</ion-label>
+                        <ion-input
+                            type="text"
+                            placeholder
+                            id="email"
+                            class="form-control"
+                            formControlName="email"
+                        ></ion-input>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>Mot de passe</ion-label>
+                        <ion-input
+                            type="password"
+                            placeholder
+                            id="password"
+                            class="form-control"
+                            formControlName="password"
+                        >
+                        </ion-input>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>Entrer de nouveau le mot de passe</ion-label>
+                        <ion-input
+                            type="password"
+                            placeholder
+                            id="password"
+                            class="form-control"
+                            formControlName="password"
+                        >
+                        </ion-input>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>Téléphone</ion-label>
+                        <ion-input
+                            type="number"
+                            placeholder
+                            id="gsm"
+                            class="form-control"
+                        >
+                        </ion-input>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>Commune</ion-label>
+                        <ion-input
+                            type="text"
+                            placeholder
+                            id="commune"
+                            class="form-control"
+                        >
+                        </ion-input>
+                    </ion-item>
+                    <ion-button
+                        expand="block"
+                        color="primary"
+                        ion-button
+                        type="submit"
+                        block
+                    >
+                        Validez votre inscription
+                    </ion-button>
+                </form>
+                <p class="text-danger">{{ errorMessage }}</p>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
 <ion-footer></ion-footer>
