--- a/Aks/src/app/home/home.page.html
+++ b/Aks/src/app/home/home.page.html
@@ -4,51 +4,37 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Accueil
+      Nouvelles
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-
 <ion-content>
-  <!-- Default Label -->
-  <!-- Default Note -->
-
   <ion-grid>
     <ion-row>
-
       <ion-col size="12">
-
-
+        <ion-list-header>{{status}}</ion-list-header>
       </ion-col>
-      <ion-col size="12">
-        <ion-list-header>Nouvelles</ion-list-header>
+      <ion-col>
+        {{userEmail}}
       </ion-col>
-      <ion-col size="12">
-
-        <ion-col size="12">
+      <ion-col size="12" *ngFor="let item of interactions">
+        <span *ngIf="item.titre==='Retrait médicament'">
+          <ion-icon name="notifications-outline" color="danger"></ion-icon>
+        </span>
+        <span *ngIf="item.titre!='Retrait médicament'">
           <ion-icon name="notifications-outline" color="warning"></ion-icon>
-          <ion-note> 30/08/2019 - 09:09</ion-note>
+        </span>
+
+
+        <ion-label><strong>{{item.titre}} </strong><br></ion-label>
+        <ion-note> {{item.dateposte}}<br></ion-note>
+        <span *ngIf="item.titre==='Retrait médicament'">
+          <ion-badge color="danger" slot="end">Alerte</ion-badge>
+        </span>
+        <ion-col size="12">
+          <ion-label>
+            {{item.description}}<br></ion-label>
         </ion-col>
-      </ion-col>
-      <ion-col size="12">
-        Un quatrième cas d'Ebola a été confirmé ce jeudi à Goma dans l'est de la RDC. " Ce nouveau cas est la femme de
-        l'homme qui est décédé hier matin. Nous sommes en train d'effectuer les investigations autour de ce cas ", a
-        déclaré à l'AFP le Dr Boubacar Diallo, coordonnateur en charge de la surveillance de cette épidémie ...
-      </ion-col>
-      <ion-col size="12">
-        <ion-icon name="notifications-outline" color="warning"></ion-icon>
-        <ion-note> 23/08/2019 - 09:09</ion-note>
-      </ion-col>
-
-      <ion-col size="12">
-        La RDC et ses partenaires mobilisent 579 millions USD pour lutter contre Ebola Au total, 2 877 cas ont été
-        enregistrés depuis le début de l’épidémie il y a un an, dont 1 934 décès.
-      </ion-col>
-
-      <ion-col size="12">
-
-
       </ion-col>
       <ion-col size="12">
         <ion-icon name="logo-facebook"></ion-icon> Facebook <ion-icon name="logo-twitter"></ion-icon> Twitter <ion-icon
