--- a/Aks/src/app/list/list.page.html
+++ b/Aks/src/app/list/list.page.html
@@ -1,27 +1,42 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      List
+      A notre propos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div>
-    </ion-item>
-  </ion-list>
-  <!--
-    <div *ngIf="selectedItem" padding>
-      You navigated here from <b>{{selectedItem.title }}</b>
-    </div>
-  -->
+    <!-- Default Label -->
+    <!-- Default Note -->
+
+    <ion-grid>
+        <ion-tabs>
+            <ion-tab-bar slot="top">
+                <ion-tab-button tab="schedule">
+                    <ion-icon name="calendar"></ion-icon>
+                    <ion-label>Notifications</ion-label>
+                    <ion-badge>6</ion-badge>
+                </ion-tab-button>
+
+                <ion-tab-button tab="speakers">
+                    <ion-icon name="contacts"></ion-icon>
+                    <ion-label>Nous contacter</ion-label>
+                </ion-tab-button>
+
+                <ion-tab-button tab="map">
+                    <ion-icon name="map"></ion-icon>
+                    <ion-label>Adresse</ion-label>
+                </ion-tab-button>
+
+                <ion-tab-button tab="about">
+                    <ion-icon name="information-circle"></ion-icon>
+                    <ion-label>Qui sommes-nous?</ion-label>
+                </ion-tab-button>
+            </ion-tab-bar>
+        </ion-tabs>
+    </ion-grid>
 </ion-content>
