--- a/Aks/src/app/search-complexe/search-complexe.component.html
+++ b/Aks/src/app/search-complexe/search-complexe.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Recherche complexe
+      Recherche avancée
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,33 +15,20 @@
   <!-- Default Note -->
 
   <ion-grid>
-    <ion-row>
-      <ion-col size="12">
-        Recherche complexe
-
-      </ion-col>
-      <ion-col size="12">
-        <ion-note>Vous avez deux options offertes.<br></ion-note>
-      </ion-col>
-      <ion-col size="12">
-
-      </ion-col>
-      <ion-col size="12">
-
-      </ion-col>
-      <ion-col size="12">
-
-      </ion-col>
-      <ion-col size="12">
-        <ion-button expand="block" color="primary">Recherche par DCI</ion-button>
-      </ion-col>
-      <ion-col size="12">
-
-      </ion-col>
-      <ion-col size="12">
-        <ion-button expand="block" color="primary">Recherche par nom commercial</ion-button>
-      </ion-col>
-    </ion-row>
+    <ion-tabs>
+      <!-- Tab bar -->
+      <ion-tab-bar slot="top">
+        <ion-tab-button tab="account">
+          <ion-icon name="navigate"></ion-icon>
+        </ion-tab-button>
+        <ion-tab-button tab="contact">
+          <ion-icon name="call"></ion-icon>
+        </ion-tab-button>
+        <ion-tab-button tab="settings">
+          <ion-icon name="settings"></ion-icon>
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-tabs>
   </ion-grid>
 </ion-content>
 <ion-footer></ion-footer>
